--- a/Exercícios_PL1.ipynb
+++ b/Exercícios_PL1.ipynb
@@ -26,7 +26,9 @@
         "wpsgrmZVXQoe",
         "yIwV3ocGsetw"
       ],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO1WG5VXQU3Ed679JEpjsK3",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -37,6 +39,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/maniglia-vithor/Linguagem-de-Programa-o-1/blob/main/Exerc%C3%ADcios_PL1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [],
