--- a/Exercícios_PL1.ipynb
+++ b/Exercícios_PL1.ipynb
@@ -913,7 +913,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def print_rwo(*args):\n",
+        "def print_two(*args):\n",
         "  arg1, arg2 = args\n",
         "  print(f\"arg1: {arg1}, arg2: {arg2}\")\n",
         "def print_two_again(arg1, arg2):\n",
