--- a/Exercícios_PL1.ipynb
+++ b/Exercícios_PL1.ipynb
@@ -5,12 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "w-zgmn2pZQJ_",
-        "bRC0u7YoBnhs",
-        "-Rzi63TYmUk_",
-        "DGvAo1EvYIim",
-        "YKkkL_tzX6oG",
-        "Omxv7F1pq_dj",
         "rGr4U08TsBxh",
         "NWruOFZmsgmo",
         "Vs1Ql1BSwQAk",
@@ -19,7 +13,6 @@
         "fIKag4j6DSGM",
         "tMdD5HyQEbJO",
         "15vBO3DkWXWG",
-        "inMLmieSWeBO",
         "KrJytJK3Wq6x",
         "KseIO8QVW_Fm",
         "BllRe1hzXIsG",
@@ -27,7 +20,7 @@
         "yIwV3ocGsetw"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO1WG5VXQU3Ed679JEpjsK3",
+      "authorship_tag": "ABX9TyM4A9LdL1eWvkqklqlTEFye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -930,22 +923,20 @@
       "metadata": {
         "id": "JRzz2apgCkBP",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bbd001c1-b5a1-4a2f-8cf8-c86634353ef8"
+        "outputId": "5475276f-43ac-40bf-c2a8-f13e82390dbf"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'print_two' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-347edc932c02>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprint_none\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"I got nothin'.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint_two\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Zed\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Shaw\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint_two_again\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Zed\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Shaw\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"First!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'print_two' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "arg1: Zed, arg2: Shaw\n",
+            "arg1: Zed, arg2: Shaw\n",
+            "arg1: First!\n",
+            "I got nothin'.\n"
           ]
         }
       ]
